--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Webpack 4</title>
+        <title>설문조사</title>
     </head>
     <body>
+        <h2>먹고 싶은 피자에 대한 설문입니다.</h2>
         <div id="result"></div>
     </body>
 </html>
